@@ -321,6 +321,14 @@ returns the table's delegate or null if no delegate was set.
 
 Creates a new table with all values that pass the test implemented by the provided function. In detail, it creates a new table, invokes the specified function for each key-value pair in the original table; if the function returns 'true', then the value is added to the newly created table at the same key.
 
+.. js:function:: table.keys()
+
+returns an array containing all the keys of the table slots.
+
+.. js:function:: table.values()
+
+returns an array containing all the values of the table slots.
+
 ^^^^^^
 Array
 ^^^^^^
